notes/lox.grammar
program     -> declaration* eof

declaration -> varDecl
            | statement

varDecl     -> "var" IDENTIFIER ( "=" expression )? ";"

statement   -> exprStmt
            | printStmt

exprStmt    -> expression ";"

printStmt   -> "print" expression ";"

expression  -> equality

equality    -> comparison ( ( "!=" | "==" ) comparison )*

comparison  -> term ( ( ">" | ">=" | "<" | "<=" ) term )*

term        -> factor ( ( "-" | "+" ) factor )*

factor      -> unary ( ( "/" | "*" ) unary )*

unary       -> ( "!" | "-" ) unary
            | primary

primary     -> NUMBER | STRING
            | "false" | "true" | "nil"
            | "(" expression ")"
            | IDENTIFIER
